syntax = "proto3";

option java_multiple_files = true;

package com.discovery.grpc;

message Discovery {
    int32 id=1;

    string itemname=2;

    string itemurl=3;

    int32 itempriority=4;

    int32 status=5;

    int32 created=6;

    int32 updated=7;

}

message DiscoveryRequest {


    int32 id=1;

    string itemname=2;

    string itemurl=3;

    int32 itempriority=4;

    repeated Discovery discovery=5;
}

message DiscoveryResponse {
    int32 id=1;

    string itemname=2;

    string itemurl=3;

    int32 itempriority=4;

    int32 status_id=5;

    repeated Discovery discovery=6;

}

service DiscoveryService{
    rpc listDiscovery(DiscoveryRequest) returns (DiscoveryResponse);
    rpc addDiscovery(DiscoveryRequest) returns (DiscoveryResponse);
    rpc removeDiscovery(DiscoveryRequest) returns (DiscoveryResponse);
    rpc modifyDiscovery(DiscoveryRequest) returns (DiscoveryResponse);
}
